force-app/main/default/objects/Lead/fields/Duplicate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Reason__c</fullName>
    <description>Señal que motivó la marca de duplicado (teléfono, email o identificador externo coincidente). Poblado por la integración MGAgencia.</description>
    <inlineHelpText>Motivo por el cual este Lead fue marcado como duplicado (por ejemplo: coincidencia de teléfono o email con un Lead existente).</inlineHelpText>
    <label>Motivo de Duplicado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>