force-app/main/default/objects/Lead/fields/Duplicated_Lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca los Leads creados por la integración MGAgencia que coinciden con un Lead existente no perdido (teléfono, email o identificador externo). El Lead se crea igualmente; este campo solo lo señala como duplicado.</description>
    <inlineHelpText>Indica que este Lead fue detectado como duplicado de otro Lead existente al momento de su creación por la integración MGAgencia.</inlineHelpText>
    <label>Lead Duplicado</label>
    <type>Checkbox</type>
</CustomField>