force-app/main/default/objects/Lead/fields/External_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_Id__c</fullName>
    <description>Identificador externo del Lead enviado por Nebüla (external_lead_id). No único por ahora, pendiente de confirmación de Nebüla.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identificador del Lead en el sistema de origen (Nebüla).</inlineHelpText>
    <label>ID Externo Nebüla</label>
    <length>100</length>
    <type>Text</type>
</CustomField>