force-app/main/default/objects/Lead/recordTypes/Fisica.recordType-meta.xml
<RecordType>
    <fullName>Fisica</fullName>
    <active>true</active>
    <businessProcess>Proceso de Candidatos Condor</businessProcess>
    <label>Persona Física</label>
</RecordType>