force-app/main/default/objects/Lead/validationRules/CodigoVendedorAsignacion.validationRule-meta.xml
<ValidationRule>
    <fullName>CodigoVendedorAsignacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
				NOT(ISPICKVAL(Status, &apos;Nuevo&apos;)), 
				ISBLANK(VendorCode2__c),
				$Profile.Name != &apos;Pre-calificación&apos;, 
$Profile.Name != &apos;Administrador del sistema&apos;,
NOT($Permission.Nebula_Integration_Bypass)
)</errorConditionFormula>
    <errorDisplayField>VendorCode2__c</errorDisplayField>
    <errorMessage>De debe seleccionar un código de vendedor.</errorMessage>
</ValidationRule>