force-app/main/default/objects/Lead/validationRules/FirstNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameRequired</fullName>
    <active>true</active>
    <description>Obliga al usuario a ingresar primer nombre.</description>
    <errorConditionFormula>AND(ISBLANK(FirstName),$UserRole.DeveloperName &lt;&gt; &apos;SystemAdministrator&apos;
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Debe ingresar primer nombre.</errorMessage>
</ValidationRule>