force-app/main/default/objects/Lead/validationRules/ValidarTareaEstadoContactado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTareaEstadoContactado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status, &apos;Formulario Meta&apos;)),
NOT(ISPICKVAL(Status, &apos;Formulario MGAgencia&apos;)),
NOT(ISPICKVAL(Status, &apos;Prospecto&apos;)),
NOT(ISPICKVAL(Estatus__c, &apos;No contactado&apos;)),
NOT(ISPICKVAL(Status, &apos;Convertido&apos;)),
ISNULL(LastActivityDate),
$Profile.Name != &apos;Pre-calificación&apos;
)</errorConditionFormula>
    <errorDisplayField>EconomicActivity__c</errorDisplayField>
    <errorMessage>Para pasar de estado se debe registrar alguna actividad.</errorMessage>
</ValidationRule>